[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=3.0",
  "notebook",
  "kedro[jupyter]~=0.19.12",
  "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
  "kedro-viz>=6.7.0",
  "scikit-learn~=1.5.1",
  "seaborn~=0.12.1"
]
dynamic = ["version"]
name = "kedro_0_19_12_project"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
  "pytest-cov~=3.0",
  "pytest-mock>=1.7.1, <2.0",
  "pytest~=7.2",
  "ruff~=0.1.8"
]
docs = [
  "docutils<0.21",
  "sphinx>=5.3,<7.3",
  "sphinx_rtd_theme==2.0.0",
  "nbsphinx==0.8.1",
  "sphinx-autodoc-typehints==1.20.2",
  "sphinx_copybutton==0.5.2",
  "ipykernel>=5.3, <7.0",
  "Jinja2<3.2.0",
  "myst-parser>=1.0,<2.1"
]

[project.scripts]
"kedro-0-19-12-project" = "kedro_0_19_12_project.__main__:main"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
fail_under = 0
show_missing = true

[tool.kedro]
example_pipeline = "False"
kedro_init_version = "0.19.12"
package_name = "kedro_0_19_12_project"
project_name = "kedro_0-19-12_project"
source_dir = "src"
tools = "['None']"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_0_19_12_project -ra"""

[tool.ruff]
ignore = ["E501"]  # Ruff format takes care of line-too-long
line-length = 88
select = [
  "F",  # Pyflakes
  "W",  # pycodestyle
  "E",  # pycodestyle
  "I",  # isort
  "UP",  # pyupgrade
  "PL",  # Pylint
  "T201"  # Print Statement
]
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic]
version = {attr = "kedro_0_19_12_project.__version__"}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
